; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_ebur128.c_ebur128_calc_relative_threshold.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_ebur128.c_ebur128_calc_relative_threshold.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64* }

@histogram_energies = common dso_local global i64* null, align 8
@RELATIVE_GATE_FACTOR = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__**, i64, double*)* @ebur128_calc_relative_threshold to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ebur128_calc_relative_threshold(%struct.TYPE_5__** %0, i64 %1, double* %2) #0 {
  %4 = alloca %struct.TYPE_5__**, align 8
  %5 = alloca i64, align 8
  %6 = alloca double*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64*, align 8
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %4, align 8
  store i64 %1, i64* %5, align 8
  store double* %2, double** %6, align 8
  store i32 0, i32* %9, align 4
  %11 = load double*, double** %6, align 8
  store double 0.000000e+00, double* %11, align 8
  store i64 0, i64* %7, align 8
  br label %12

12:                                               ; preds = %54, %3
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* %5, align 8
  %15 = icmp ult i64 %13, %14
  br i1 %15, label %16, label %57

16:                                               ; preds = %12
  %17 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %18 = load i64, i64* %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__*, %struct.TYPE_5__** %17, i64 %18
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i64*, i64** %23, align 8
  store i64* %24, i64** %10, align 8
  store i64 0, i64* %8, align 8
  br label %25

25:                                               ; preds = %50, %16
  %26 = load i64, i64* %8, align 8
  %27 = icmp ult i64 %26, 1000
  br i1 %27, label %28, label %53

28:                                               ; preds = %25
  %29 = load i64*, i64** %10, align 8
  %30 = load i64, i64* %8, align 8
  %31 = getelementptr inbounds i64, i64* %29, i64 %30
  %32 = load i64, i64* %31, align 8
  %33 = load i64*, i64** @histogram_energies, align 8
  %34 = load i64, i64* %8, align 8
  %35 = getelementptr inbounds i64, i64* %33, i64 %34
  %36 = load i64, i64* %35, align 8
  %37 = mul i64 %32, %36
  %38 = uitofp i64 %37 to double
  %39 = load double*, double** %6, align 8
  %40 = load double, double* %39, align 8
  %41 = fadd double %40, %38
  store double %41, double* %39, align 8
  %42 = load i64*, i64** %10, align 8
  %43 = load i64, i64* %8, align 8
  %44 = getelementptr inbounds i64, i64* %42, i64 %43
  %45 = load i64, i64* %44, align 8
  %46 = load i32, i32* %9, align 4
  %47 = sext i32 %46 to i64
  %48 = add i64 %47, %45
  %49 = trunc i64 %48 to i32
  store i32 %49, i32* %9, align 4
  br label %50

50:                                               ; preds = %28
  %51 = load i64, i64* %8, align 8
  %52 = add i64 %51, 1
  store i64 %52, i64* %8, align 8
  br label %25

53:                                               ; preds = %25
  br label %54

54:                                               ; preds = %53
  %55 = load i64, i64* %7, align 8
  %56 = add i64 %55, 1
  store i64 %56, i64* %7, align 8
  br label %12

57:                                               ; preds = %12
  %58 = load i32, i32* %9, align 4
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %70

60:                                               ; preds = %57
  %61 = load i32, i32* %9, align 4
  %62 = sitofp i32 %61 to double
  %63 = load double*, double** %6, align 8
  %64 = load double, double* %63, align 8
  %65 = fdiv double %64, %62
  store double %65, double* %63, align 8
  %66 = load double, double* @RELATIVE_GATE_FACTOR, align 8
  %67 = load double*, double** %6, align 8
  %68 = load double, double* %67, align 8
  %69 = fmul double %68, %66
  store double %69, double* %67, align 8
  br label %70

70:                                               ; preds = %60, %57
  %71 = load i32, i32* %9, align 4
  ret i32 %71
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
